--- a/Tree_growth/Tree_growth.vcxproj
+++ b/Tree_growth/Tree_growth.vcxproj
@@ -133,10 +133,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Environment_Generation.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Element_Soil.h" />
     <ClInclude Include="Environment.h" />
+    <ClInclude Include="Environment_Elements.h" />
+    <ClInclude Include="Environment_Generation.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
