--- a/Tree_growth/Tree_growth.vcxproj.filters
+++ b/Tree_growth/Tree_growth.vcxproj.filters
@@ -35,5 +35,11 @@
     <ClInclude Include="Element_Soil.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="Element_Resource.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Element_Environment.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
